# fallof

./: README.md  pyproject.toml
results/: fallof_2026-01-18_14h27m37s.json  fallof_2026-01-18_16h14m32s.json  fallof_2026-01-18_16h17m09s.json  fallof_2026-01-18_16h18m28s.json  fallof_2026-01-18_16h22m40s.json  fallof_2026-01-18_16h24m01s.json
src/fallof_detroix23/: __main__.py
src/fallof_detroix23.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/fallof_detroix23/modules/: cli.py  grid.py  logger.py  maths.py  robot.py  simulation.py  statistics.py
