[project]
name = "fallof_detroix23"
version = "1.0.0"
description = "Probability of moving on a finite board."
authors = [
    { name="Detroix23", email="detroix23@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Typing :: Typed",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
dependencies = []
license = "CC-BY-4.0"
license-files = [
    "LICENSE.md"
]

[project.urls]
Repository = "https://github.com/Detroix23/fallof"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
